# Arduino-OTAUpdate

./: library.json
UpdateClient/: CMakeLists.txt  UpdateClient.cpp
include/: StreamOTAUpdate.h  TCPOTAUpdate.h
src/: StreamOTAUpdate.cpp  TCPOTAUpdate.cpp
